Agregar lectura de env desde / para vite

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -143,6 +143,9 @@
     <!-- Template Javascript -->
     <script type='module' src="js/main.js"></script>
     <script type='module' src="js/index/index.js"></script>
+    <script type='module'>
+        console.log(import.meta.env.VITE_LOCAL_URL)
+    </script>
 
 </body>
 
